# stlinux

./: .gitignore  .gitmodules  README.md  clfs.sh
board/: README.md  ftdi_configuartion.xml
board/KiCad/: low_level_io.kicad_sch  mcu.kicad_sch  memories.kicad_sch  power.kicad_sch  sdram.kicad_sch  stlinux.kicad_pcb  stlinux.kicad_pro  stlinux.kicad_sch  uart.kicad_sch
board/STM32CubeMX/: linux_board.ioc
board/kicad/: mcu.kicad_sch  stlinux.kicad_sch
board_test/: .gitignore  CMakeLists.txt  README.md  toolchain.sh
board_test/app/: board.c  board.h  delay.c  delay.h  generator.c  generator.h  linker.ld  main.c  startup.c  syscalls.c  tests.c  tests.h
cube/: linux_board.ioc
doc/readme/: board_test.md  uboot.md
sch/: low_level_io.kicad_sch  mcu.kicad_sch  memories.kicad_sch  power.kicad_sch  stlinux.kicad_pcb  stlinux.kicad_pro  stlinux.kicad_sch  uart.kicad_sch
system/configs/: busybox.config  uclibc.config
system/patches/busybox/: 0001-Fix-menuconfig-issue-with-ncurses-not-found.patch
system/patches/linux/: 0001-Add-support-for-STM32F446-MCU.patch  0001-Add-support-for-STM32F446.patch  0001-Added-support-for-STM32F446-MCU.patch  0002-Add-support-for-board-based-on-STM32F446.patch  0002-add-support-for-stlinux-board.patch  0003-Add-support-for-MMC.patch
system/patches/u-boot/: 0001-Add-initial-support-for-STM32F446-based-board-stlinu.patch  0001-Add-support-for-STM32F446-based-board-stlinux.patch  0002-Fixed-bank-sizes-of-internal-flash-memory-on-STM32F4.patch  0003-Fixed-config-related-to-Flash-for-STLinux-board.patch  0004-Add-LED-support.patch  0005-Add-size-limit.patch  0006-Made-SPI-NOR-Flash-working.patch  0007-Enable-MTD-for-SPI-NOR-Flash.patch  0008-Fix-default-loadaddr.patch  0009-Moved-env-into-a-file-add-console-and-mtd-partitions.patch  0010-Regenerate-defconfig-using-make-proper-defconfig.patch  0011-Add-variable-with-rootfs-load-address-into-env.patch  0012-Remove-double-printing-and-add-autoboot.patch  0013-Update-kernel-args-add-rdinit-and-make-define-MTD-in.patch  0014-Add-mtdparts-to-the-kernel-args.patch  0015-Add-support-for-MMC-card.patch
system/patches/uclibc/: 0001-Fix-menuconfig-issue-with-ncurses.patch
system/skeleton/etc/: hostname  inittab  issue  profile
system/skeleton/etc/rc.d/: shutdown  startup
system/skeleton/etc/rc.d/init.d/: syslogd
